Fixed the RequestFtpAccess mailto link to also work on Mac and Linux. Fixed two Mac and Linux GUI bugs where the content in the first and list frame was not shown correctly. Updated the bowser laucnher class. Updated ols-dialog to 2.0.1.