@@ -1,46 +1,55 @@
 package no.uib.prideconverter.util;
 
-/////////////////////////////////////////////////////////
-//  Bare Bones Browser Launch                          //
-//  Version 1.5 (December 10, 2005)                    //
-//  By Dem Pilafian                                    //
-//  Supports: Mac OS X, GNU/Linux, Unix, Windows XP    //
-//  Example Usage:                                     //
-//     String url = "http://www.centerkey.com/";       //
-//     BareBonesBrowserLaunch.openURL(url);            //
-//  Public Domain Software -- Free to Use as You Like  //
-/////////////////////////////////////////////////////////
 import java.lang.reflect.Method;
 import javax.swing.JOptionPane;
+import java.util.Arrays;
 
+/**
+ * <b>Bare Bones Browser Launch for Java</b><br>
+ * Utility class to open a web page from a Swing application
+ * in the user's default browser.<br>
+ * Supports: Mac OS X, GNU/Linux, Unix, Windows XP/Vista<br>
+ * Example Usage:<code><br> &nbsp; &nbsp;
+ *    String url = "http://www.google.com/";<br> &nbsp; &nbsp;
+ *    BareBonesBrowserLaunch.openURL(url);<br></code>
+ * Latest Version: <a href="http://www.centerkey.com/java/browser/">www.centerkey.com/java/browser</a><br>
+ * Author: Dem Pilafian<br>
+ * Public Domain Software -- Free to Use as You Like
+ * @version 2.0, May 26, 2009
+ */
 public class BareBonesBrowserLaunch {
 
     private static final String errMsg = "Error attempting to launch web browser";
+    static final String[] browsers = {"firefox", "opera", "konqueror", "epiphany",
+        "seamonkey", "galeon", "kazehakase", "mozilla", "netscape"};
 
     public static void openURL(String url) {
+
         String osName = System.getProperty("os.name");
+
         try {
             if (osName.startsWith("Mac OS")) {
                 Class fileMgr = Class.forName("com.apple.eio.FileManager");
-                Method openURL = fileMgr.getDeclaredMethod("openURL",
-                        new Class[]{String.class});
+                Method openURL = fileMgr.getDeclaredMethod("openURL", new Class[]{String.class});
                 openURL.invoke(null, new Object[]{url});
             } else if (osName.startsWith("Windows")) {
                 Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
             } else { //assume Unix or Linux
-                String[] browsers = {
-                    "firefox", "opera", "konqueror", "epiphany", "mozilla", "netscape"};
-                String browser = null;
-                for (int count = 0; count < browsers.length && browser == null; count++) {
-                    if (Runtime.getRuntime().exec(
-                            new String[]{"which", browsers[count]}).waitFor() == 0) {
-                        browser = browsers[count];
+
+                boolean found = false;
+
+                for (String browser : browsers) {
+                    if (!found) {
+                        found = Runtime.getRuntime().exec(
+                                new String[]{"which", browser}).waitFor() == 0;
+                        if (found) {
+                            Runtime.getRuntime().exec(new String[]{browser, url});
+                        }
                     }
                 }
-                if (browser == null) {
-                    throw new Exception("Could not find web browser");
-                } else {
-                    Runtime.getRuntime().exec(new String[]{browser, url});
+
+                if (!found) {
+                    throw new Exception(Arrays.toString(browsers));
                 }
             }
         } catch (Exception e) {
